--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
 	background-color: #817981;
+	text-align: center;
 }
 
 .container {
@@ -15,6 +16,11 @@ body {
 	position: relative;
 	margin: 30px;
 	background-image: url('../img/menu_background.png');
+	display: inline-block;
+
+	-webkit-box-shadow: 0px 3px 12px rgba(50, 50, 50, 0.75);
+-moz-box-shadow:    0px 3px 12px rgba(50, 50, 50, 0.75);
+box-shadow:         0px 3px 12px rgba(50, 50, 50, 0.75);
 }
 
 .menu img {
