--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ box-shadow:         0px 3px 12px rgba(50, 50, 50, 0.75);
 .song canvas{
 	position: absolute;
 	top: 0;
+	left: 0;
 	background-image: url('../img/background.png');
 }
 
