--- a/css/style.css
+++ b/css/style.css
@@ -34,17 +34,17 @@ box-shadow:         0px 3px 12px rgba(50, 50, 50, 0.75);
 	margin-top: 220px;
 	width : 300px;
 	left: 170px;
-	font-size: 30px;
+	font-size: 34px;
 }
 
 .menu li {
 	list-style: none;
 	text-align: center;
-	color: black;
+	color: #817981;
 }
 
 .menu .selected {
-	color :red;
+	color :#f29372;
 	font-size: 120%;
 }
 
