--- a/css/style.css
+++ b/css/style.css
@@ -116,23 +116,30 @@ box-shadow:         0px 3px 12px rgba(50, 50, 50, 0.75);
 	display: none;
 	position: absolute;
 	z-index: 1000;
-	top: 400px;
+	top: 382px;
+}
+
+.action {
+	background-image: url('../img/marker_hit.png');
+	width: 66px;
+	height: 42px;
+	padding-top: 26px
 }
 
 #forked {
-	left: 44px;
+	left: 42px;
 }
 
 #pushed {
-	left: 144px;
+	left: 142px;
 }
 
 #pulled {
-	left: 244px;
+	left: 242px;
 }
 
 #cloned {
-	left: 344px;
+	left: 342px;
 }
 
 #status {
