--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ dt, dd {
 	display: inline;
 }
 
+#mute {
+	cursor: pointer;
+	font-weight: bold;
+}
+
 .songs {
 	margin-top: 20px;
 }
@@ -40,7 +45,7 @@ dt, dd {
 	cursor: pointer;
 }
 
-.song-list-item, small {
+.song-list-item, small, p, #mute{
 	font-family: helvetica, arial, sans-serif;
 }
 
