--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ dt, dd {
 	cursor: pointer;
 }
 
-.song-list-item, small, p, #mute{
+.song-list-item, small, p, #mute, #song-credits li{
 	font-family: helvetica, arial, sans-serif;
 }
 
